cmake_minimum_required(VERSION 3.10)
project(exercices_TP1)

set(CMAKE_CXX_STANDARD 17)

# Exécutable pour exo1.cpp
add_executable(exercies_TP1 Main.cpp)

add_executable(exo1 exo1.cpp
        exo1.cpp)
add_executable(exo2 exo2.cpp
        exo2.cpp)
#add_executable(exo3 exo3.cpp)
#add_executable(exo4 exo4.cpp)
#add_executable(exo5 exo5.cpp)
add_executable(exo3 exo3.cpp)
add_executable(exo4 exo4.cpp)
add_executable(exo5 exo5.cpp)
add_executable(exo6 exo6.cpp)
